UE04/src/3/MiniCpp.output
State 169 conflicts: 1 shift/reduce


Grammar

    0 $accept: MiniCpp $end

    1 MiniCpp: /* empty */
    2        | MiniCpp ConstDef
    3        | MiniCpp VarDef
    4        | MiniCpp Func
    5        | MiniCpp ';'

    6 ConstDef: CONST Type IDENT Init OptIdentInit ';'

    7 OptIdentInit: /* empty */
    8             | OptIdentInit ',' IDENT Init

    9 Init: '=' InitValue

   10 InitValue: FALSE
   11          | TRUE
   12          | NULLPTR
   13          | '+' NUMBER
   14          | '-' NUMBER

   15 VarDef: Type VarDefContentVariable VarDefContent ';'

   16 VarDefContent: /* empty */
   17              | VarDefContent ',' VarDefContentVariable

   18 VarDefContentVariable: OptStar IDENT OptInit

   19 OptStar: /* empty */
   20        | '*'

   21 OptInit: /* empty */
   22        | Init

   23 Func: FuncHead WhatFunc

   24 WhatFunc: FuncDecl
   25         | FuncDef

   26 FuncDecl: ';'

   27 FuncDef: Block

   28 FuncHead: Type OptStar IDENT '(' OptFormParList ')'

   29 OptFormParList: /* empty */
   30               | FormParList

   31 FormParList: VOID
   32            | FormParameter FormParListContent

   33 FormParListContent: /* empty */
   34                   | FormParListContent ',' FormParameter

   35 FormParameter: Type OptStar IDENT OptArray

   36 OptArray: /* empty */
   37         | '[' ']'

   38 Type: VOID
   39     | INT
   40     | BOOL

   41 Block: '{' OptBlockContent '}'

   42 OptBlockContent: /* empty */
   43                | OptBlockContent ConstDef
   44                | OptBlockContent VarDef
   45                | OptBlockContent Stat

   46 Stat: EmptyStat
   47     | Block
   48     | ExprStat
   49     | IfStat
   50     | WhileStat
   51     | BreakStat
   52     | InputStat
   53     | OutputStat
   54     | DeleteStat
   55     | ReturnStat

   56 EmptyStat: ';'

   57 ExprStat: Expr ';'

   58 IfStat: IF '(' Expr ')' Stat ElseOptStat

   59 ElseOptStat: /* empty */
   60            | ELSE Stat

   61 WhileStat: WHILE '(' Expr ')' Stat

   62 BreakStat: BREAK ';'

   63 InputStat: CIN CINSY IDENT ';'

   64 OutputStat: COUT COUTSY OutputOptionsDef OutputOptions ';'

   65 OutputOptions: /* empty */
   66              | OutputOptions COUTSY OutputOptionsDef

   67 OutputOptionsDef: Expr
   68                 | STRING
   69                 | ENDL

   70 DeleteStat: DELETE '[' ']' IDENT ';'

   71 ReturnStat: RETURN OptExpr ';'

   72 OptExpr: /* empty */
   73        | Expr

   74 Expr: OrExpr OptAnotherOrExpr

   75 OptAnotherOrExpr: /* empty */
   76                 | OptAnotherOrExpr AssignmentOperator OrExpr

   77 AssignmentOperator: '='
   78                   | PLUSASG
   79                   | MINUSASG
   80                   | TIMESASG
   81                   | DIVIDEASG
   82                   | MODASG

   83 OrExpr: AndExpr OptAndExpr

   84 OptAndExpr: /* empty */
   85           | OptAndExpr OR AndExpr

   86 AndExpr: RelExpr OptRelExpr

   87 OptRelExpr: /* empty */
   88           | OptRelExpr AND RelExpr

   89 RelExpr: SimpleExpr AnotherRelExpr

   90 AnotherRelExpr: /* empty */
   91               | AnotherRelExpr CompareSymbol SimpleExpr

   92 CompareSymbol: EQUALS
   93              | NOTEQUALS
   94              | '<'
   95              | SMALLEREQUALS
   96              | GREATEREQUALS
   97              | '>'

   98 PlusOrMinus: '+'
   99            | '-'

  100 OptSign: /* empty */
  101        | PlusOrMinus

  102 SimpleExpr: OptSign Term AnotherTerm

  103 AnotherTerm: /* empty */
  104            | AnotherTerm PlusOrMinus Term

  105 Term: NotFact AnotherNotFact

  106 AnotherNotFact: /* empty */
  107               | AnotherNotFact FactSymbol NotFact

  108 FactSymbol: '*'
  109           | '/'
  110           | '%'

  111 NotFact: '!' Fact
  112        | Fact

  113 Fact: FALSE
  114     | TRUE
  115     | NULLPTR
  116     | NUMBER
  117     | FactOpt
  118     | NEW Type '[' Expr ']'
  119     | '(' Expr ')'

  120 FactOpt: OptPlusPlus IDENT OptFactOpt OptPlusPlus

  121 OptPlusPlus: /* empty */
  122            | PLUSPLUS
  123            | MINUSMINUS

  124 OptFactOpt: /* empty */
  125           | '[' Expr ']'
  126           | '(' OptActParList ')'

  127 OptActParList: /* empty */
  128              | Expr ActParList

  129 ActParList: /* empty */
  130           | ActParList ',' Expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 111
'%' (37) 110
'(' (40) 28 58 61 119 126
')' (41) 28 58 61 119 126
'*' (42) 20 108
'+' (43) 13 98
',' (44) 8 17 34 130
'-' (45) 14 99
'/' (47) 109
';' (59) 5 6 15 26 56 57 62 63 64 70 71
'<' (60) 94
'=' (61) 9 77
'>' (62) 97
'[' (91) 37 70 118 125
']' (93) 37 70 118 125
'{' (123) 41
'}' (125) 41
error (256)
NUMBER (258) 13 14 116
CONST (259) 6
FALSE (260) 10 113
TRUE (261) 11 114
NULLPTR (262) 12 115
BOOL (263) 40
IF (264) 58
ELSE (265) 60
WHILE (266) 61
BREAK (267) 62
CIN (268) 63
COUT (269) 64
STRING (270) 68
ENDL (271) 69
RETURN (272) 71
NEW (273) 118
VOID (274) 31 38
INT (275) 39
IDENT (276) 6 8 18 28 35 63 70 120
DELETE (277) 70
SMALLEREQUALS (278) 95
GREATEREQUALS (279) 96
CINSY (280) 63
COUTSY (281) 64 66
PLUSASG (282) 78
MINUSASG (283) 79
TIMESASG (284) 80
DIVIDEASG (285) 81
MODASG (286) 82
EQUALS (287) 92
NOTEQUALS (288) 93
PLUSPLUS (289) 122
MINUSMINUS (290) 123
OR (291) 85
AND (292) 88


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
MiniCpp (56)
    on left: 1 2 3 4 5, on right: 0 2 3 4 5
ConstDef (57)
    on left: 6, on right: 2 43
OptIdentInit (58)
    on left: 7 8, on right: 6 8
Init (59)
    on left: 9, on right: 6 8 22
InitValue (60)
    on left: 10 11 12 13 14, on right: 9
VarDef (61)
    on left: 15, on right: 3 44
VarDefContent (62)
    on left: 16 17, on right: 15 17
VarDefContentVariable (63)
    on left: 18, on right: 15 17
OptStar (64)
    on left: 19 20, on right: 18 28 35
OptInit (65)
    on left: 21 22, on right: 18
Func (66)
    on left: 23, on right: 4
WhatFunc (67)
    on left: 24 25, on right: 23
FuncDecl (68)
    on left: 26, on right: 24
FuncDef (69)
    on left: 27, on right: 25
FuncHead (70)
    on left: 28, on right: 23
OptFormParList (71)
    on left: 29 30, on right: 28
FormParList (72)
    on left: 31 32, on right: 30
FormParListContent (73)
    on left: 33 34, on right: 32 34
FormParameter (74)
    on left: 35, on right: 32 34
OptArray (75)
    on left: 36 37, on right: 35
Type (76)
    on left: 38 39 40, on right: 6 15 28 35 118
Block (77)
    on left: 41, on right: 27 47
OptBlockContent (78)
    on left: 42 43 44 45, on right: 41 43 44 45
Stat (79)
    on left: 46 47 48 49 50 51 52 53 54 55, on right: 45 58 60 61
EmptyStat (80)
    on left: 56, on right: 46
ExprStat (81)
    on left: 57, on right: 48
IfStat (82)
    on left: 58, on right: 49
ElseOptStat (83)
    on left: 59 60, on right: 58
WhileStat (84)
    on left: 61, on right: 50
BreakStat (85)
    on left: 62, on right: 51
InputStat (86)
    on left: 63, on right: 52
OutputStat (87)
    on left: 64, on right: 53
OutputOptions (88)
    on left: 65 66, on right: 64 66
OutputOptionsDef (89)
    on left: 67 68 69, on right: 64 66
DeleteStat (90)
    on left: 70, on right: 54
ReturnStat (91)
    on left: 71, on right: 55
OptExpr (92)
    on left: 72 73, on right: 71
Expr (93)
    on left: 74, on right: 57 58 61 67 73 118 119 125 128 130
OptAnotherOrExpr (94)
    on left: 75 76, on right: 74 76
AssignmentOperator (95)
    on left: 77 78 79 80 81 82, on right: 76
OrExpr (96)
    on left: 83, on right: 74 76
OptAndExpr (97)
    on left: 84 85, on right: 83 85
AndExpr (98)
    on left: 86, on right: 83 85
OptRelExpr (99)
    on left: 87 88, on right: 86 88
RelExpr (100)
    on left: 89, on right: 86 88
AnotherRelExpr (101)
    on left: 90 91, on right: 89 91
CompareSymbol (102)
    on left: 92 93 94 95 96 97, on right: 91
PlusOrMinus (103)
    on left: 98 99, on right: 101 104
OptSign (104)
    on left: 100 101, on right: 102
SimpleExpr (105)
    on left: 102, on right: 89 91
AnotherTerm (106)
    on left: 103 104, on right: 102 104
Term (107)
    on left: 105, on right: 102 104
AnotherNotFact (108)
    on left: 106 107, on right: 105 107
FactSymbol (109)
    on left: 108 109 110, on right: 107
NotFact (110)
    on left: 111 112, on right: 105 107
Fact (111)
    on left: 113 114 115 116 117 118 119, on right: 111 112
FactOpt (112)
    on left: 120, on right: 117
OptPlusPlus (113)
    on left: 121 122 123, on right: 120
OptFactOpt (114)
    on left: 124 125 126, on right: 120
OptActParList (115)
    on left: 127 128, on right: 126
ActParList (116)
    on left: 129 130, on right: 128 130


State 0

    0 $accept: . MiniCpp $end

    $default  reduce using rule 1 (MiniCpp)

    MiniCpp  go to state 1


State 1

    0 $accept: MiniCpp . $end
    2 MiniCpp: MiniCpp . ConstDef
    3        | MiniCpp . VarDef
    4        | MiniCpp . Func
    5        | MiniCpp . ';'

    $end   shift, and go to state 2
    CONST  shift, and go to state 3
    BOOL   shift, and go to state 4
    VOID   shift, and go to state 5
    INT    shift, and go to state 6
    ';'    shift, and go to state 7

    ConstDef  go to state 8
    VarDef    go to state 9
    Func      go to state 10
    FuncHead  go to state 11
    Type      go to state 12


State 2

    0 $accept: MiniCpp $end .

    $default  accept


State 3

    6 ConstDef: CONST . Type IDENT Init OptIdentInit ';'

    BOOL  shift, and go to state 4
    VOID  shift, and go to state 5
    INT   shift, and go to state 6

    Type  go to state 13


State 4

   40 Type: BOOL .

    $default  reduce using rule 40 (Type)


State 5

   38 Type: VOID .

    $default  reduce using rule 38 (Type)


State 6

   39 Type: INT .

    $default  reduce using rule 39 (Type)


State 7

    5 MiniCpp: MiniCpp ';' .

    $default  reduce using rule 5 (MiniCpp)


State 8

    2 MiniCpp: MiniCpp ConstDef .

    $default  reduce using rule 2 (MiniCpp)


State 9

    3 MiniCpp: MiniCpp VarDef .

    $default  reduce using rule 3 (MiniCpp)


State 10

    4 MiniCpp: MiniCpp Func .

    $default  reduce using rule 4 (MiniCpp)


State 11

   23 Func: FuncHead . WhatFunc

    ';'  shift, and go to state 14
    '{'  shift, and go to state 15

    WhatFunc  go to state 16
    FuncDecl  go to state 17
    FuncDef   go to state 18
    Block     go to state 19


State 12

   15 VarDef: Type . VarDefContentVariable VarDefContent ';'
   28 FuncHead: Type . OptStar IDENT '(' OptFormParList ')'

    '*'  shift, and go to state 20

    $default  reduce using rule 19 (OptStar)

    VarDefContentVariable  go to state 21
    OptStar                go to state 22


State 13

    6 ConstDef: CONST Type . IDENT Init OptIdentInit ';'

    IDENT  shift, and go to state 23


State 14

   26 FuncDecl: ';' .

    $default  reduce using rule 26 (FuncDecl)


State 15

   41 Block: '{' . OptBlockContent '}'

    $default  reduce using rule 42 (OptBlockContent)

    OptBlockContent  go to state 24


State 16

   23 Func: FuncHead WhatFunc .

    $default  reduce using rule 23 (Func)


State 17

   24 WhatFunc: FuncDecl .

    $default  reduce using rule 24 (WhatFunc)


State 18

   25 WhatFunc: FuncDef .

    $default  reduce using rule 25 (WhatFunc)


State 19

   27 FuncDef: Block .

    $default  reduce using rule 27 (FuncDef)


State 20

   20 OptStar: '*' .

    $default  reduce using rule 20 (OptStar)


State 21

   15 VarDef: Type VarDefContentVariable . VarDefContent ';'

    $default  reduce using rule 16 (VarDefContent)

    VarDefContent  go to state 25


State 22

   18 VarDefContentVariable: OptStar . IDENT OptInit
   28 FuncHead: Type OptStar . IDENT '(' OptFormParList ')'

    IDENT  shift, and go to state 26


State 23

    6 ConstDef: CONST Type IDENT . Init OptIdentInit ';'

    '='  shift, and go to state 27

    Init  go to state 28


State 24

   41 Block: '{' OptBlockContent . '}'
   43 OptBlockContent: OptBlockContent . ConstDef
   44                | OptBlockContent . VarDef
   45                | OptBlockContent . Stat

    CONST   shift, and go to state 3
    BOOL    shift, and go to state 4
    IF      shift, and go to state 29
    WHILE   shift, and go to state 30
    BREAK   shift, and go to state 31
    CIN     shift, and go to state 32
    COUT    shift, and go to state 33
    RETURN  shift, and go to state 34
    VOID    shift, and go to state 5
    INT     shift, and go to state 6
    DELETE  shift, and go to state 35
    ';'     shift, and go to state 36
    '+'     shift, and go to state 37
    '-'     shift, and go to state 38
    '{'     shift, and go to state 15
    '}'     shift, and go to state 39

    $default  reduce using rule 100 (OptSign)

    ConstDef     go to state 40
    VarDef       go to state 41
    Type         go to state 42
    Block        go to state 43
    Stat         go to state 44
    EmptyStat    go to state 45
    ExprStat     go to state 46
    IfStat       go to state 47
    WhileStat    go to state 48
    BreakStat    go to state 49
    InputStat    go to state 50
    OutputStat   go to state 51
    DeleteStat   go to state 52
    ReturnStat   go to state 53
    Expr         go to state 54
    OrExpr       go to state 55
    AndExpr      go to state 56
    RelExpr      go to state 57
    PlusOrMinus  go to state 58
    OptSign      go to state 59
    SimpleExpr   go to state 60


State 25

   15 VarDef: Type VarDefContentVariable VarDefContent . ';'
   17 VarDefContent: VarDefContent . ',' VarDefContentVariable

    ';'  shift, and go to state 61
    ','  shift, and go to state 62


State 26

   18 VarDefContentVariable: OptStar IDENT . OptInit
   28 FuncHead: Type OptStar IDENT . '(' OptFormParList ')'

    '='  shift, and go to state 27
    '('  shift, and go to state 63

    $default  reduce using rule 21 (OptInit)

    Init     go to state 64
    OptInit  go to state 65


State 27

    9 Init: '=' . InitValue

    FALSE    shift, and go to state 66
    TRUE     shift, and go to state 67
    NULLPTR  shift, and go to state 68
    '+'      shift, and go to state 69
    '-'      shift, and go to state 70

    InitValue  go to state 71


State 28

    6 ConstDef: CONST Type IDENT Init . OptIdentInit ';'

    $default  reduce using rule 7 (OptIdentInit)

    OptIdentInit  go to state 72


State 29

   58 IfStat: IF . '(' Expr ')' Stat ElseOptStat

    '('  shift, and go to state 73


State 30

   61 WhileStat: WHILE . '(' Expr ')' Stat

    '('  shift, and go to state 74


State 31

   62 BreakStat: BREAK . ';'

    ';'  shift, and go to state 75


State 32

   63 InputStat: CIN . CINSY IDENT ';'

    CINSY  shift, and go to state 76


State 33

   64 OutputStat: COUT . COUTSY OutputOptionsDef OutputOptions ';'

    COUTSY  shift, and go to state 77


State 34

   71 ReturnStat: RETURN . OptExpr ';'

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38

    ';'       reduce using rule 72 (OptExpr)
    $default  reduce using rule 100 (OptSign)

    OptExpr      go to state 78
    Expr         go to state 79
    OrExpr       go to state 55
    AndExpr      go to state 56
    RelExpr      go to state 57
    PlusOrMinus  go to state 58
    OptSign      go to state 59
    SimpleExpr   go to state 60


State 35

   70 DeleteStat: DELETE . '[' ']' IDENT ';'

    '['  shift, and go to state 80


State 36

   56 EmptyStat: ';' .

    $default  reduce using rule 56 (EmptyStat)


State 37

   98 PlusOrMinus: '+' .

    $default  reduce using rule 98 (PlusOrMinus)


State 38

   99 PlusOrMinus: '-' .

    $default  reduce using rule 99 (PlusOrMinus)


State 39

   41 Block: '{' OptBlockContent '}' .

    $default  reduce using rule 41 (Block)


State 40

   43 OptBlockContent: OptBlockContent ConstDef .

    $default  reduce using rule 43 (OptBlockContent)


State 41

   44 OptBlockContent: OptBlockContent VarDef .

    $default  reduce using rule 44 (OptBlockContent)


State 42

   15 VarDef: Type . VarDefContentVariable VarDefContent ';'

    '*'  shift, and go to state 20

    $default  reduce using rule 19 (OptStar)

    VarDefContentVariable  go to state 21
    OptStar                go to state 81


State 43

   47 Stat: Block .

    $default  reduce using rule 47 (Stat)


State 44

   45 OptBlockContent: OptBlockContent Stat .

    $default  reduce using rule 45 (OptBlockContent)


State 45

   46 Stat: EmptyStat .

    $default  reduce using rule 46 (Stat)


State 46

   48 Stat: ExprStat .

    $default  reduce using rule 48 (Stat)


State 47

   49 Stat: IfStat .

    $default  reduce using rule 49 (Stat)


State 48

   50 Stat: WhileStat .

    $default  reduce using rule 50 (Stat)


State 49

   51 Stat: BreakStat .

    $default  reduce using rule 51 (Stat)


State 50

   52 Stat: InputStat .

    $default  reduce using rule 52 (Stat)


State 51

   53 Stat: OutputStat .

    $default  reduce using rule 53 (Stat)


State 52

   54 Stat: DeleteStat .

    $default  reduce using rule 54 (Stat)


State 53

   55 Stat: ReturnStat .

    $default  reduce using rule 55 (Stat)


State 54

   57 ExprStat: Expr . ';'

    ';'  shift, and go to state 82


State 55

   74 Expr: OrExpr . OptAnotherOrExpr

    $default  reduce using rule 75 (OptAnotherOrExpr)

    OptAnotherOrExpr  go to state 83


State 56

   83 OrExpr: AndExpr . OptAndExpr

    $default  reduce using rule 84 (OptAndExpr)

    OptAndExpr  go to state 84


State 57

   86 AndExpr: RelExpr . OptRelExpr

    $default  reduce using rule 87 (OptRelExpr)

    OptRelExpr  go to state 85


State 58

  101 OptSign: PlusOrMinus .

    $default  reduce using rule 101 (OptSign)


State 59

  102 SimpleExpr: OptSign . Term AnotherTerm

    NUMBER      shift, and go to state 86
    FALSE       shift, and go to state 87
    TRUE        shift, and go to state 88
    NULLPTR     shift, and go to state 89
    NEW         shift, and go to state 90
    PLUSPLUS    shift, and go to state 91
    MINUSMINUS  shift, and go to state 92
    '('         shift, and go to state 93
    '!'         shift, and go to state 94

    $default  reduce using rule 121 (OptPlusPlus)

    Term         go to state 95
    NotFact      go to state 96
    Fact         go to state 97
    FactOpt      go to state 98
    OptPlusPlus  go to state 99


State 60

   89 RelExpr: SimpleExpr . AnotherRelExpr

    $default  reduce using rule 90 (AnotherRelExpr)

    AnotherRelExpr  go to state 100


State 61

   15 VarDef: Type VarDefContentVariable VarDefContent ';' .

    $default  reduce using rule 15 (VarDef)


State 62

   17 VarDefContent: VarDefContent ',' . VarDefContentVariable

    '*'  shift, and go to state 20

    $default  reduce using rule 19 (OptStar)

    VarDefContentVariable  go to state 101
    OptStar                go to state 81


State 63

   28 FuncHead: Type OptStar IDENT '(' . OptFormParList ')'

    BOOL  shift, and go to state 4
    VOID  shift, and go to state 102
    INT   shift, and go to state 6

    $default  reduce using rule 29 (OptFormParList)

    OptFormParList  go to state 103
    FormParList     go to state 104
    FormParameter   go to state 105
    Type            go to state 106


State 64

   22 OptInit: Init .

    $default  reduce using rule 22 (OptInit)


State 65

   18 VarDefContentVariable: OptStar IDENT OptInit .

    $default  reduce using rule 18 (VarDefContentVariable)


State 66

   10 InitValue: FALSE .

    $default  reduce using rule 10 (InitValue)


State 67

   11 InitValue: TRUE .

    $default  reduce using rule 11 (InitValue)


State 68

   12 InitValue: NULLPTR .

    $default  reduce using rule 12 (InitValue)


State 69

   13 InitValue: '+' . NUMBER

    NUMBER  shift, and go to state 107


State 70

   14 InitValue: '-' . NUMBER

    NUMBER  shift, and go to state 108


State 71

    9 Init: '=' InitValue .

    $default  reduce using rule 9 (Init)


State 72

    6 ConstDef: CONST Type IDENT Init OptIdentInit . ';'
    8 OptIdentInit: OptIdentInit . ',' IDENT Init

    ';'  shift, and go to state 109
    ','  shift, and go to state 110


State 73

   58 IfStat: IF '(' . Expr ')' Stat ElseOptStat

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38

    $default  reduce using rule 100 (OptSign)

    Expr         go to state 111
    OrExpr       go to state 55
    AndExpr      go to state 56
    RelExpr      go to state 57
    PlusOrMinus  go to state 58
    OptSign      go to state 59
    SimpleExpr   go to state 60


State 74

   61 WhileStat: WHILE '(' . Expr ')' Stat

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38

    $default  reduce using rule 100 (OptSign)

    Expr         go to state 112
    OrExpr       go to state 55
    AndExpr      go to state 56
    RelExpr      go to state 57
    PlusOrMinus  go to state 58
    OptSign      go to state 59
    SimpleExpr   go to state 60


State 75

   62 BreakStat: BREAK ';' .

    $default  reduce using rule 62 (BreakStat)


State 76

   63 InputStat: CIN CINSY . IDENT ';'

    IDENT  shift, and go to state 113


State 77

   64 OutputStat: COUT COUTSY . OutputOptionsDef OutputOptions ';'

    STRING  shift, and go to state 114
    ENDL    shift, and go to state 115
    '+'     shift, and go to state 37
    '-'     shift, and go to state 38

    $default  reduce using rule 100 (OptSign)

    OutputOptionsDef  go to state 116
    Expr              go to state 117
    OrExpr            go to state 55
    AndExpr           go to state 56
    RelExpr           go to state 57
    PlusOrMinus       go to state 58
    OptSign           go to state 59
    SimpleExpr        go to state 60


State 78

   71 ReturnStat: RETURN OptExpr . ';'

    ';'  shift, and go to state 118


State 79

   73 OptExpr: Expr .

    $default  reduce using rule 73 (OptExpr)


State 80

   70 DeleteStat: DELETE '[' . ']' IDENT ';'

    ']'  shift, and go to state 119


State 81

   18 VarDefContentVariable: OptStar . IDENT OptInit

    IDENT  shift, and go to state 120


State 82

   57 ExprStat: Expr ';' .

    $default  reduce using rule 57 (ExprStat)


State 83

   74 Expr: OrExpr OptAnotherOrExpr .
   76 OptAnotherOrExpr: OptAnotherOrExpr . AssignmentOperator OrExpr

    PLUSASG    shift, and go to state 121
    MINUSASG   shift, and go to state 122
    TIMESASG   shift, and go to state 123
    DIVIDEASG  shift, and go to state 124
    MODASG     shift, and go to state 125
    '='        shift, and go to state 126

    $default  reduce using rule 74 (Expr)

    AssignmentOperator  go to state 127


State 84

   83 OrExpr: AndExpr OptAndExpr .
   85 OptAndExpr: OptAndExpr . OR AndExpr

    OR  shift, and go to state 128

    $default  reduce using rule 83 (OrExpr)


State 85

   86 AndExpr: RelExpr OptRelExpr .
   88 OptRelExpr: OptRelExpr . AND RelExpr

    AND  shift, and go to state 129

    $default  reduce using rule 86 (AndExpr)


State 86

  116 Fact: NUMBER .

    $default  reduce using rule 116 (Fact)


State 87

  113 Fact: FALSE .

    $default  reduce using rule 113 (Fact)


State 88

  114 Fact: TRUE .

    $default  reduce using rule 114 (Fact)


State 89

  115 Fact: NULLPTR .

    $default  reduce using rule 115 (Fact)


State 90

  118 Fact: NEW . Type '[' Expr ']'

    BOOL  shift, and go to state 4
    VOID  shift, and go to state 5
    INT   shift, and go to state 6

    Type  go to state 130


State 91

  122 OptPlusPlus: PLUSPLUS .

    $default  reduce using rule 122 (OptPlusPlus)


State 92

  123 OptPlusPlus: MINUSMINUS .

    $default  reduce using rule 123 (OptPlusPlus)


State 93

  119 Fact: '(' . Expr ')'

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38

    $default  reduce using rule 100 (OptSign)

    Expr         go to state 131
    OrExpr       go to state 55
    AndExpr      go to state 56
    RelExpr      go to state 57
    PlusOrMinus  go to state 58
    OptSign      go to state 59
    SimpleExpr   go to state 60


State 94

  111 NotFact: '!' . Fact

    NUMBER      shift, and go to state 86
    FALSE       shift, and go to state 87
    TRUE        shift, and go to state 88
    NULLPTR     shift, and go to state 89
    NEW         shift, and go to state 90
    PLUSPLUS    shift, and go to state 91
    MINUSMINUS  shift, and go to state 92
    '('         shift, and go to state 93

    $default  reduce using rule 121 (OptPlusPlus)

    Fact         go to state 132
    FactOpt      go to state 98
    OptPlusPlus  go to state 99


State 95

  102 SimpleExpr: OptSign Term . AnotherTerm

    $default  reduce using rule 103 (AnotherTerm)

    AnotherTerm  go to state 133


State 96

  105 Term: NotFact . AnotherNotFact

    $default  reduce using rule 106 (AnotherNotFact)

    AnotherNotFact  go to state 134


State 97

  112 NotFact: Fact .

    $default  reduce using rule 112 (NotFact)


State 98

  117 Fact: FactOpt .

    $default  reduce using rule 117 (Fact)


State 99

  120 FactOpt: OptPlusPlus . IDENT OptFactOpt OptPlusPlus

    IDENT  shift, and go to state 135


State 100

   89 RelExpr: SimpleExpr AnotherRelExpr .
   91 AnotherRelExpr: AnotherRelExpr . CompareSymbol SimpleExpr
